# sub-pub

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  TESTING.md  TODO.md  artifacthub-repo.yml  behave.ini  demo.py  pretty.output  requirements.txt  setup.py  test_basic.py  test_kafka_debug.py
.github/workflows/: ci-cd.yml
examples/: custom_processors.py  fan-config.yaml  funnel-config.yaml  mock-config.yaml  one-to-one-config.yaml
helm/: KUBERNETES.md  README.md
helm/sub-pub/: Chart.yaml  values-production-kafka.yaml  values-pulsar-funnel.yaml  values.yaml
rust/: ARCHITECTURE.md  Cargo.toml  PROGRESS.md
rust/examples/: mock-fan.yaml  mock-funnel.yaml  mock-one-to-one.yaml
rust/src/: error.rs  lib.rs  main.rs
rust/src/adapters/: eventhubs.rs  factory.rs  google_pubsub.rs  kafka.rs  mock.rs  mod.rs  pulsar.rs
rust/src/config/: mod.rs  models.rs
rust/src/core/: interfaces.rs  message.rs  mod.rs
rust/src/domain/: mod.rs  processor.rs
rust/src/flows/: base.rs  fan.rs  funnel.rs  mod.rs  one_to_one.rs
rust/src/metrics/: collector.rs  mod.rs
sub_pub/: __init__.py  main.py
sub_pub/adapters/: __init__.py  eventhubs.py  factory.py  google_pubsub.py  iggy.py  kafka.py  mock.py  pulsar.py
sub_pub/config/: models.py
sub_pub/core/: __init__.py  interfaces.py  message.py
sub_pub/domain/: __init__.py  processor.py
sub_pub/flows/: __init__.py  async_base.py  (+5 more)
tests/: README.md  __init__.py  test_async_flow.py  test_eventhubs_adapter.py  test_google_pubsub_adapter.py  test_otel_metrics.py
(+24 files in other folders)
