[package]
name = "sub-pub"
version = "0.1.0"
edition = "2021"
authors = ["David Wilson"]
description = "Extreme performance pub-sub message processor (Rust rewrite)"

[[bin]]
name = "sub-pub"
path = "src/main.rs"

[lib]
name = "sub_pub"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"

# Serialization / config
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Unique IDs
uuid = { version = "1.13", features = ["v4"] }

# Kafka (optional)
rdkafka = { version = "0.37", optional = true }

[features]
default = []
kafka = ["dep:rdkafka"]

[dev-dependencies]
tokio-test = "0.4"
